--- a/LogMergeRxTests/LogMergeRxTests.csproj
+++ b/LogMergeRxTests/LogMergeRxTests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>LogMergeRx</RootNamespace>
+
+    <AssemblyName>LogMergeRx.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
