--- a/LogMergeRxTests/LogMergeRxTests.csproj
+++ b/LogMergeRxTests/LogMergeRxTests.csproj
@@ -1,13 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <RootNamespace>LogMergeRx</RootNamespace>
-
-    <AssemblyName>LogMergeRx.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
