--- a/LogMergeRx/LogMergeRx.csproj
+++ b/LogMergeRx/LogMergeRx.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="ReactiveProperty" Version="7.7.0" />
     <PackageReference Include="ReactiveProperty.Core" Version="7.7.0" />
   </ItemGroup>
