--- a/LogMergeRx/LogMergeRx.csproj
+++ b/LogMergeRx/LogMergeRx.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041</TargetFramework>
     <UseWPF>true</UseWPF>
+    <UseWinforms>true</UseWinforms>
     <StartupObject>LogMergeRx.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="25.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="ReactiveProperty" Version="7.7.0" />
-    <PackageReference Include="ReactiveProperty.Core" Version="7.7.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
