--- a/LogMergeRxTests/LogMergeRxTests.csproj
+++ b/LogMergeRxTests/LogMergeRxTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows10.0.19041</TargetFramework>
     <IsPackable>false</IsPackable>
+    <RootNamespace>LogMergeRx</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
